Eğitim modülündeki yerelleştirme metinleri güncellendi. Polifazik uyku ile ilgili açıklamalar ve soruların yanıtları, daha anlaşılır ve bilgilendirici hale getirildi. Ayrıca, bazı ifadeler yeniden düzenlenerek daha akıcı bir dil kullanıldı.

--- a/polynap/Resources/Localizations/Education.xcstrings
+++ b/polynap/Resources/Localizations/Education.xcstrings
@@ -5454,7 +5454,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Sık Sorulan Sorular"
+            "value" : "Merak Edilen Sorular"
           }
         }
       }
@@ -5495,7 +5495,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Hayır, polifazik uyku kardiyovasküler sorunlar, bağışıklık bozukluğu ve artan kaza riski dahil önemli sağlık riskleri taşır. Tıp profesyonelleri buna şiddetle karşı tavsiye ediyor."
+            "value" : "Polifazik uyku, vücudunuzu dinlemeyi ve adaptasyon sürecini dikkatle yönetmeyi gerektiren bir disiplindir. Başlangıçta yorgunluk hissedilebilir, bu nedenle bu sürece hazırlıklı olmak ve vücudun sinyallerine kulak vermek önemlidir."
           }
         }
       }
@@ -5536,7 +5536,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Teknik olarak daha fazla uyanık saatiniz olabilir, ancak bilişsel işlevdeki ciddi bozulma, sağlık sorunları ve artan yorgunluk bu zamanı verimli aktiviteler için büyük ölçüde kullanılamaz hale getirir."
+            "value" : "Evet, polifazik uykunun en çekici yanlarından biri, gün içinde size ekstra saatler kazandırma potansiyelidir. Bu ek zamanı, doğru bir adaptasyon süreciyle kişisel projeleriniz veya hobileriniz için verimli bir şekilde kullanabilirsiniz."
           }
         }
       }
@@ -5577,7 +5577,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "İddia edilen adaptasyon süreleri haftalarca ile aylar arasında değişir, ancak bilimsel kanıtlar gerçek adaptasyonun asla gerçekleşmediğini gösteriyor - vücut kronik uyku yoksunluğu etkilerinden zarar görmeye devam ediyor."
+            "value" : "Adaptasyon süreci kişiden kişiye değişmekle birlikte genellikle birkaç hafta sürer. Bu dönemde düzenli bir programa bağlı kalmak ve vücudun yeni ritme uyum sağlamasına izin vermek, başarılı bir geçiş için kilit rol oynar."
           }
         }
       }
@@ -5618,7 +5618,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Mikro uyku epizodları, beynin 1-30+ saniye boyunca kapandığı kısa, istemsiz dönemlerdir. Son derece tehlikelidirler ve araba kullanırken, iş sırasında veya herhangi bir aktivite sırasında meydana gelebilir, kazalara ve potansiyel olarak ölümcül sonuçlara yol açabilir."
+            "value" : "Mikro uykular, adaptasyon sürecinin başlarında vücudun yeni düzene alışmaya çalışırken yaşayabildiği kısa uyku anlarıdır. Bu, sürecin doğal bir parçası olabilir ve genellikle vücut alıştıkça azalır. Bu dönemde dikkat gerektiren aktivitelerde tedbirli olmak faydalıdır."
           }
         }
       }
@@ -5647,7 +5647,7 @@
         "ms" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Dakwaan mengenai tokoh sejarah yang menggunakan tidur polifasa sebahagian besarnya adalah mitos atau salah tafsir. Orang yang berjaya pada zaman moden mengutamakan kualiti tidur dan mengikut saranan perubatan untuk tidur gabungan selama 7-9 jam."
+            "value" : "Dakwaan mengenai tokoh sejarah yang menggunakan tidur polifasa sebahagian besarnya adalah mitos veya salah tafsir. Orang yang berjaya pada zaman moden mengutamakan kualiti tidur dan mengikut saranan perubatan untuk tidur gabungan selama 7-9 jam."
           }
         },
         "th" : {
@@ -5659,7 +5659,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Tarihi şahsiyetlerin polifazik uyku kullandığına dair iddialar büyük ölçüde efsane veya yanlış yorumlamalardır. Modern başarılı insanlar kaliteli uykuya öncelik verir ve 7-9 saatlik konsolide uyku için tıbbi tavsiyeleri takip eder."
+            "value" : "Tarih boyunca Leonardo da Vinci ve Nikola Tesla gibi dâhilerin üretkenliklerini artırmak için polifazik uyku düzenlerini denedikleri rivayet edilir. Günümüzde de pek çok girişimci ve sanatçı, zamanlarını daha verimli kullanmak için bu yöntemi keşfetmektedir."
           }
         }
       }
@@ -5700,7 +5700,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Hiçbir bilimsel kanıt polifazik uykudan yaratıcılık artışını desteklemiyor. Aslında, kronik uyku yoksunluğu tipik olarak yaratıcı düşünceyi, problem çözme becerilerini ve bilişsel esnekliği bozar."
+            "value" : "Bazı kullanıcılar, polifazik uykunun getirdiği farklı bilinç halleri ve rüya döngüleri sayesinde yaratıcılıklarının ve problem çözme yeteneklerinin arttığını bildirmektedir. Daha fazla uyanık kalma süresi, yaratıcı projelere daha fazla zaman ayırma imkanı da sunar."
           }
         }
       }
@@ -5741,7 +5741,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Derhal durdurun ve normal bir uyku düzenine dönün. Endişe verici herhangi bir semptom yaşarsanız, bir sağlık sağlayıcısına danışın. Vücudunuzun uyku yoksunluğu etkilerinden iyileşmesi için birkaç hafta bekleyin."
+            "value" : "Eğer zorlanıyorsanız, programınızı gözden geçirmek veya daha kolay bir polifazik programa geçmek iyi bir fikir olabilir. Topluluk forumlarından destek almak ve deneyimli kişilerin tavsiyelerini dinlemek bu süreci daha yönetilebilir kılabilir. Unutmayın, esneklik önemlidir."
           }
         }
       }
@@ -5782,7 +5782,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Evet! Zaman yönetimine odaklanın, zaman kaybettiren aktiviteleri ortadan kaldırın, iş akışınızı optimize edin ve gerektiğinde stratejik 10-20 dakikalık güç uykulari kullanın. Bu yaklaşımlar sağlık riski olmadan gerçek faydalar sağlar."
+            "value" : "Elbette. Polifazik uyku, üretkenliği artırma yöntemlerinden sadece biridir. Zaman yönetimi teknikleri, verimli çalışma alışkanlıkları ve gün içinde yapılan kısa 'güç uykuları' (power naps) gibi stratejiler de polifazik düzeni tamamlayıcı veya alternatif olarak harika sonuçlar verebilir."
           }
         }
       }
@@ -5823,7 +5823,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Tıbbi durumları olan kişiler, yüksek riskli mesleklerdekiler (sağlık, ulaşım, acil servisler), ebeveynler, öğrenciler, 25 yaş altındaki herkes ve mevcut uyku bozuklukları olanlar asla polifazik uyku denememelidir."
+            "value" : "Yoğun ve esnek olmayan bir iş veya okul programı olanlar, sağlık sorunları yaşayanlar veya hamileler için polifazik uykuya uyum sağlamak daha zorlayıcı olabilir. Bu yolculuğa çıkmadan önce mevcut yaşam tarzınızı ve sorumluluklarınızı göz önünde bulundurmak önemlidir."
           }
         }
       }
@@ -5864,7 +5864,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Hayır. Bu uygulama polifazik uykuyu şiddetle önermiyor ve öncelikle kullanıcıları ciddi sağlık riskleri ve bilimsel destek eksikliği hakkında eğitmek için var. Uyku endişeleri için sağlık profesyonelleriyle danışmanızı öneriyoruz."
+            "value" : "Bu uygulama, polifazik uykuyu keşfetmek isteyenlere bir yol haritası sunar. Uyku programları oluşturmanıza, adaptasyon sürecinizi takip etmenize ve bu ilginç uyku düzeninin potansiyel faydalarını keşfetmenize yardımcı olacak araçlar ve bilgilerle donatılmıştır."
           }
         }
       }
@@ -5905,7 +5905,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Polifazik uyku güvenli midir?"
+            "value" : "Polifazik uykuya başlarken nelere dikkat etmeliyim?"
           }
         }
       }
@@ -5946,7 +5946,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Polifazik uyku ile ekstra zaman kazanabilir miyim?"
+            "value" : "Polifazik uyku ile gün içinde daha fazla aktif zaman yaratmak mümkün mü?"
           }
         }
       }
@@ -5987,7 +5987,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Polifazik adaptasyon ne kadar sürer?"
+            "value" : "Vücudun polifazik düzene alışma süreci nasıl işler?"
           }
         }
       }
@@ -6028,7 +6028,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Mikro uyku epizodları nedir?"
+            "value" : "Adaptasyon sırasında karşılaşılan 'mikro uyku' nedir?"
           }
         }
       }
@@ -6069,7 +6069,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ünlü insanlar polifazik uyku kullanır mı?"
+            "value" : "Tarihten veya günümüzden polifazik uykuyu deneyen ilham verici isimler var mı?"
           }
         }
       }
@@ -6110,7 +6110,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Polifazik uyku yaratıcılığı artırabilir mi?"
+            "value" : "Polifazik uykunun yaratıcılık üzerinde bir etkisi olabilir mi?"
           }
         }
       }
@@ -6151,7 +6151,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Zaten polifazik uyku deniyorsam ne yapmalıyım?"
+            "value" : "Polifazik uyku düzenimde zorlanırsam ne yapmalıyım?"
           }
         }
       }
@@ -6192,7 +6192,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Daha fazla zaman kazanmak için güvenli alternatifler var mı?"
+            "value" : "Polifazik uyku dışında üretkenliği artırmanın başka yolları var mı?"
           }
         }
       }
@@ -6233,7 +6233,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Kimler asla polifazik uyku denememelidir?"
+            "value" : "Polifazik uyku kimler için daha zorlayıcı olabilir?"
           }
         }
       }
@@ -6274,7 +6274,7 @@
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bu uygulama polifazik uykuyu teşvik ediyor mu?"
+            "value" : "Bu uygulama polifazik uyku yolculuğumda bana nasıl yardımcı olabilir?"
           }
         }
       }
