Geri bildirim alanına yerelleştirilmiş placeholder metni eklendi. Kullanıcıların mesajlarını daha kolay girmesi için arka planda bir ZStack yapısı oluşturuldu. Ayrıca, e-posta gönderimi sırasında klavye kapatma işlevi ve metin alanlarının güvenli bir şekilde kapatılması için yardımcı yöntemler eklendi. Kullanıcı deneyimini iyileştirmek amacıyla çeşitli görsel ve işlevsel güncellemeler yapıldı.

--- a/polynap/Resources/Localizations/Profile.xcstrings
+++ b/polynap/Resources/Localizations/Profile.xcstrings
@@ -739,6 +739,47 @@
         }
       }
     },
+    "feedback.message.placeholder" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Geben Sie Ihre Nachricht hier ein..."
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Enter your message here..."
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ここにメッセージを入力してください..."
+          }
+        },
+        "ms" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Masukkan mesej anda di sini..."
+          }
+        },
+        "th" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ใส่ข้อความของคุณที่นี่..."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Mesajınızı buraya yazın..."
+          }
+        }
+      }
+    },
     "feedback.name" : {
       "extractionState" : "manual",
       "localizations" : {
